Updated LaTeX report document. Added the required structure ofor the report, still have to make corrections in the MC algorithm specification.

--- a/report/Ising_Model.tex
+++ b/report/Ising_Model.tex
@@ -78,7 +78,7 @@ donde $H$ es un campo magnético externo aplicado a la región donde se encuentr
 Tomando el caso en le que $H=0$ la ecuación \ref{H1} se convierte en 
 \begin{equation}
 \label{H2}
-\mathcal{H}=-J\sum_{(i\sim j)}\sigma_i \sigma_j
+\mathcal{H}=-J\sum_{\langle i j\rangle}\sigma_i \sigma_j
 \end{equation}
 Para resolver el problema de Ising se tiene que encontrar la función de partición canónica
 \begin{equation}\label{partition}
